--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"node-sass": "^6.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-scripts": "4.0.3"
+		"react-scripts": "4.0.3",
+		"simple-git": "^2.42.0"
 	},
 	"devDependencies": {
 		"@types/node": "14.x",
